<resources>
    <string name="app_name">轻念</string>

    <string name="activity_main_nav_setting">设置</string>
    <string name="activity_main_nav_about">关于</string>
    <string name="activity_main_item_date_format">%s-%s-%s</string>
    <string name="activity_main_item_date_format_lunar">%s年 %s %s</string>

    <string name="activity_anni_edit_title">编辑</string>
    <string name="activity_anni_edit_lunar_name">农历</string>
    <string name="activity_anni_edit_theme_name">主题色</string>
    <string name="activity_anni_edit_image_name">主题图片</string>
    <string name="activity_anni_edit_date_format">%s年 %s月 %s日</string>
    <string name="activity_anni_edit_date_format_lunar">%s年 %s %s</string>
    <string name="activity_anni_edit_toolbar_save">保存</string>
    <string name="activity_anni_type_dialog_title">纪念日类型</string>
    <string name="activity_anni_theme_dialog_title">选择主题色</string>
    <string name="activity_anni_edit_toast_save_success">保存成功</string>

    <string name="activity_anniversary_toolbar_delete">删除</string>
    <string name="activity_anniversary_toolbar_edit">编辑</string>
    <string name="activity_anniversary_toolbar_share">分享</string>
    <string name="activity_anniversary_delete_dialog_message">确认删除这个纪念日?</string>

    <string name="activity_setting_title">设置</string>
    <string name="activity_setting_toast_backup_success">成功备份至%s</string>
    <string name="activity_setting_toast_restore_success">恢复数据成功</string>
    <string name="activity_setting_dialog_backup_fail_message">数据备份失败</string>
    <string name="activity_setting_dialog_restore_fail_message">数据恢复失败</string>

    <string name="activity_about_title">关于</string>
    <string name="activity_about_github_text">Github</string>
    <string name="activity_about_open_source_text">开源相关</string>
    <string name="activity_about_open_source_address">https://github.com/NevermindZZT/Days</string>
    <string name="activity_about_copyright_text">© 2020 Letter All rights reserved</string>

    <string name="activity_widget_setting_title">选择纪念日</string>
    <string name="activity_widget_setting_closest_day">最近的纪念日</string>

    <string name="activity_open_source_title">开源相关</string>

    <string name="dialog_positive_button">确认</string>
    <string name="dialog_negative_button">取消</string>

    <string name="setting_group_basic">基础设置</string>
    <string name="setting_group_notify">定时提醒</string>
    <string name="setting_group_theme">主题设置</string>
    <string name="setting_group_backup">备份与恢复</string>

    <string name="setting_slogan_default">记住值得铭记的</string>
    <string name="setting_slogan_title">标语</string>
    <string name="setting_slogan_summary">展示在抽屉里应用名下方</string>
    <string name="setting_widget_background_title">Widget背景透明</string>
    <string name="setting_widget_background_summary">设置桌面Widget控件是否背景透明</string>
    <string name="setting_intent_notification_title">使用前台服务</string>
    <string name="setting_intent_notification_summary">通过显示一个前台通知保活，启动后可以在系统设置中将前台通知关闭</string>
    <string name="setting_time_line_title">显示时间轴</string>
    <string name="setting_time_line_summary">纪念日列表显示时间轴，同时纪念日会按照时间排列</string>
    <string name="setting_enable_notify_title">定时提醒</string>
    <string name="setting_enable_notify_summary">从定时提醒源自动获取提醒内容，通知提醒</string>
    <string name="setting_notify_source_title">定时提醒源</string>
    <string name="setting_notify_source_summary">配置定时提醒的内容源</string>
    <string name="setting_notify_source_default">https://raw.githubusercontent.com/NevermindZZT/Days/master/notify.json</string>
    <string name="setting_theme_mode_title">主题模式</string>
    <string name="setting_simple_mode_title">简约模式</string>
    <string name="setting_simple_mode_summary">简约模式下，纪念日图片等会被禁用</string>
    <string name="setting_backup_title">备份</string>
    <string name="setting_backup_summary">备份纪念日数据到Documents目录</string>
    <string name="setting_restore_title">恢复</string>
    <string name="setting_restore_summary">从文件中恢复纪念日数据</string>

    <string name="shortcut_add_anni_short_label">添加纪念日</string>

    <string name="notification_channel_anni_id">anni</string>
    <string name="notification_channel_anni_name">纪念日提醒</string>
    <string name="notification_channel_intent_id">intent</string>
    <string name="notification_channel_intent_name">前台服务</string>

    <string name="notification_intent_title">@string/app_name</string>
    <string name="notification_intent_content">纪念日通知服务运行中</string>
</resources>
